@@ -101,7 +101,7 @@ static void
 cmd_test_help (void)
 {
     urj_log (URJ_LOG_LEVEL_NORMAL,
-             _("Usage: %s SIGNAL 0/1\n"
+             _("Usage: %s signal SIGNAL 0/1\n"
                "Test signal state from output BSR (Boundary Scan Register).\n"
                "\n"
                "SIGNAL        signal name (from JTAG declaration file)\n"),
@@ -114,10 +114,15 @@ cmd_test_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
 {
     switch (token_point)
     {
-    case 1:  /* name */
+    case 1:
+        urj_completion_mayben_add_match (matches, match_cnt, text, text_len, "signal");
+        break;
+
+    case 2:  /* name */
         cmd_signal_complete (chain, matches, match_cnt, text, text_len);
         break;
-    case 2:  /* value */
+
+    case 3:  /* value */
         urj_completion_mayben_add_match (matches, match_cnt, text, text_len, "0");
         urj_completion_mayben_add_match (matches, match_cnt, text, text_len, "1");
         break;
