@@ -9,6 +9,10 @@
 
   * src/global/parse.c (urj_parse_line): Include the line when debugging.
 
+  * src/cmd/cmd_get.c, src/cmd/cmd_set.c, src/cmd/cmd_test.c: Fix up help text
+    from an earlier commit -- make sure the literal "signal" is the 2nd arg in
+    the help text and for completion handlers.
+
 2011-02-21  Mike Frysinger  <vapier@gentoo.org>
 
   * data/Makefile.am (nobase_dist_pkgdata_DATA): Add missing analog/bfin/bfin.
